--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,69 +1,86 @@
 .container {
-  padding: 0 2rem;
+  /* padding: 0 2rem; */
+  @apply px-1 py-0
 }
 
 .main {
-  min-height: 100vh;
+  @apply min-h-screen py-16 px-0 flex flex-col justify-center items-center;
+
+  /* min-height: 100vh;
   padding: 4rem 0;
-  flex: 1;
+  flex: 1; 
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .footer {
-  display: flex;
+
+  @apply flex flex-1 py-1 px-0 border border-[#eaeaea] justify-center items-center;
+  /* display: flex;
   flex: 1;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .footer a {
-  display: flex;
+  @apply flex justify-center items-center flex-grow;
+  /* display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
+  flex-grow: 1; */
 }
 
 .title a {
-  color: #0070f3;
-  text-decoration: none;
+  @apply  text-[#0070f3] no-underline;
+  /* color: #0070f3;
+  text-decoration: none; */
 }
 
 .title a:hover,
 .title a:focus,
 .title a:active {
-  text-decoration: underline;
+  @apply underline;
+
+  /* text-decoration: underline; */
 }
 
 .title {
-  margin: 0;
+  @apply m-0 leading-[1.15]  text-[4rem];
+  /* margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 4rem; */
 }
 
 .title,
 .description {
-  text-align: center;
+  @apply  text-center;
+  /* text-align: center; */
 }
 
 .description {
-  margin: 4rem 0;
+  @apply my-16 mx-0  leading-[1.15] text-[1.5rem] ;
+  /* margin: 4rem 0;
   line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 1.5rem; */
 }
 
 .code {
-  background: #fafafa;
+  @apply bg-[#fafafa] rounded-[5px] p-3 text-lg ;
+  /* background: #fafafa;
   border-radius: 5px;
   padding: 0.75rem;
-  font-size: 1.1rem;
+  font-size: 1.1rem; */
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
+
+/* 
+This css can be use normally without Tailwinds css
+*/
 
 .grid {
   display: flex;
